@@ -25,6 +25,7 @@
 * Added "How to serve multiple languages" section to documentation
 * Fixed a performance issue with nested pages when using the ``inherit`` flag on the ``{% placeholder %}`` tag.
 * Removed the internal ``reset_to_public`` page method in favour of the ``revert_to_live`` method.
+* Fixed a bug where the placeholder cache was not consistently cleared when a page was published.
 
 
 === 3.4.3 (2017-04-24) ===
